manifest/objects/sbaa__ApprovalSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>sbaa__ApprovalCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Condition that the value is captured from</description>
        <inlineHelpText>Approval Condition that the value is captured from</inlineHelpText>
        <label>Approval Condition</label>
        <referenceTo>sbaa__ApprovalCondition__c</referenceTo>
        <relationshipLabel>Approval Snapshots</relationshipLabel>
        <relationshipName>ApprovalSnapshot2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__Approval__c</fullName>
        <description>Related Approval for the stored Snapshot</description>
        <inlineHelpText>Related Approval for the stored Snapshot</inlineHelpText>
        <label>Approval</label>
        <referenceTo>sbaa__Approval__c</referenceTo>
        <relationshipLabel>Approval Snapshots</relationshipLabel>
        <relationshipName>ApprovalSnapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueDate__c</fullName>
        <description>Date that is captured</description>
        <inlineHelpText>Date that is captured</inlineHelpText>
        <label>Approved Value (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueLongText__c</fullName>
        <description>Long Text that is captured</description>
        <inlineHelpText>Long Text that is captured</inlineHelpText>
        <label>Approved Value (Long Text)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueNumeric__c</fullName>
        <description>Numeric Value that is captured</description>
        <inlineHelpText>Numeric Value that is captured</inlineHelpText>
        <label>Approved Value (Numeric)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueText__c</fullName>
        <description>Text Value that is captured</description>
        <inlineHelpText>Text Value that is captured</inlineHelpText>
        <label>Approved Value (Text)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Approval Snapshot</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Approval Snapshot #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>